--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1394,7 +1394,7 @@
 												</label>
 												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 													<i class="fa fa-file-text"></i>
-													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29212.docx"></a>
+													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29212.docx"></a>
 												</div>
 												<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 													<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAutorizzazioneMinisteroSalute, null, null, null, true, null, false)" ></th:block> -->
@@ -1417,7 +1417,7 @@
 												</label>
 												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 													<i class="fa fa-file-text"></i>
-													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29210.docx"></a>
+													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29210.docx"></a>
 												</div>
 												<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 													<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia, null, null, null, true, null, false)" ></th:block> -->
@@ -1468,10 +1468,10 @@
 													<span th:text="#{label.allegato_contratti_accordi_convenzioni}">Allegato Contratti Accordi Convenzioni</span>
 													<span class="required">*</span>
 												</label>
-												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
+												<!-- div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 													<i class="fa fa-file-text"></i>
-													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29211.docx"></a>
-												</div>
+													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29211.docx"></a>
+												</div-->
 												<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 													<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, contrattiAccordiConvenzioni, null, null, null, true, null, false)" ></th:block> -->
 													<th:block th:unless="${isRiedizione or isEditSemiBloccato}" th:include="fragments/allegatiext :: allegatiext(eventoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CONTRATTI_ACCORDI_CONVENZIONI}', contrattiAccordiConvenzioni, null, null, null, true, 'edit', false)" ></th:block>
@@ -1493,7 +1493,7 @@
 												</label>
 												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 													<i class="fa fa-file-text"></i>
-													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29211.docx"></a>
+													<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29211.docx"></a>
 												</div>
 												<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 													<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaFinanziamenti, null, null, null, true, null, false)" ></th:block> -->
@@ -1562,7 +1562,7 @@
 											</label>
 											<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 												<i class="fa fa-file-text"></i>
-												<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29209.docx"></a>
+												<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29209.docx"></a>
 											</div>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, dichiarazioneAssenzaConflittoInteresse, null, null, null, false, null, false)" ></th:block> -->
