--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -392,7 +392,7 @@
 									<span th:text="#{label.nome_sponsor}">Nome dello Sponsor</span>
 									<span class="required">*</span>
 								</label>
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 margin-top-22">
 									<input id="nome_sponsor"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${eventoWrapper.tempSponsorEvento.name}" />
