--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -950,7 +950,7 @@
 														method="post" enctype="multipart/form-data" novalidate="novalidate">
 													<div class="model-link" id="esempio_importEventi">
 														<i class="fa fa-file-text"></i>
-														<a id="importEventi_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29219.zip"></a>
+														<a id="importEventi_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29219.zip"></a>
 													</div>
 
 													<!-- <th:block th:include="fragments/allegati :: allegati(pianoFormativoWrapper, false, importEventiDaCsvFile, null, null, null, false, null, false)" ></th:block> -->
