--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -1083,12 +1083,12 @@
 											</div>
 
 											<div th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf}">
-												<div>
-													<a data-toggle="modal" data-target=".modal-confirm">Conferma Valutazione</a>
-												</div>
+												
 												<label class="control-label">
 													<span th:class="label-show" th:text="#{label.pdf_verbale_valutazione_sul_campo}">pdf_verbale_valutazione_sul_campo</span>
+													&nbsp;&nbsp;<a class="btn btn-primary" data-toggle="modal" data-target=".modal-confirm">Modifica documenti</a>
 												</label>
+												
 												<div>
 													<div class="value"><i class="fa fa-download"> </i> <a th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.nomeFile}" th:href="@{|/file/${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.id}|}"></a></div>
 													<div class="" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.isProtocollato()}"><div class="value"><i class="fa fa-pencil"> </i> <span th:text="#{label.info_protocollo(${#numbers.formatInteger(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.protocollo.numero,0)},${#temporals.format(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.protocollo.data,'dd/MM/yyyy')})}"></span></div></div>
@@ -1103,10 +1103,6 @@
 												</div>
 												<div th:if="${accreditamentoWrapper.accreditamento.valutazioneSulCampoAllegato3}">
 													<div class="value"><i class="fa fa-download"> </i> <a th:text="${accreditamentoWrapper.accreditamento.valutazioneSulCampoAllegato3.nomeFile}" th:href="@{|/file/${accreditamentoWrapper.accreditamento.valutazioneSulCampoAllegato3.id}|}"></a></div>
-												</div>
-												<div class="item form-group">
-													<div class="col-lg-1 col-xs-12"></div>
-													<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO3}', valutazioneSulCampoAllegato3, null, null, null, false, 'edit', false)" ></th:block>
 												</div>
 												<div class="divider-dashed"></div>
 											</div>
