--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -632,7 +632,7 @@
 					</div>
 				</div>
 				
-				<!-- modale conferma valutazione  -->
+				<!-- modale modifica documenti di valutazione  -->
 				<div id="confirm-modal" class="modal fade modal-confirm"
 					data-model-index="1" role="dialog">
 					<div class="modal-dialog modal-lg">
@@ -642,27 +642,22 @@
 									<span aria-hidden="true">×</span>
 								</button>
 								<h4 class="modal-title" id="myModalLabel"
-									th:text="#{label.conferma_valutazione}"></h4>
+									th:text="#{label.cambio_verbali}"></h4>
 							</div>
 							<div class="modal-body">
-								<form id="formValutazioneComplessiva" class="form-horizontal"
-									
+								<form id="modificaDocumentiDiValutazione" class="form-horizontal"
+									th:action="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/modificaDocumentiDiValutazione|}"
 									method="post" enctype="multipart/form-data"
-									novalidate="novalidate">
-
-									<!-- th:action="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/confirmEvaluation|}"  -->
-
-									
+									novalidate="novalidate">								
 
 									
 									<th:block th:if="${#authentication.principal.hasProfile('SEGRETERIA')
-										and accreditamentoWrapper.accreditamento.isAccreditatoInAttesaDiFirma()
 										and accreditamentoWrapper.accreditamento.isStandard()}">
-
+										<!-- and accreditamentoWrapper.accreditamento.isAccreditatoInAttesaDiFirma() -->
 
 										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf')} ? 'bad'">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_PDF_VERBALE_VALUTAZIONE_SUL_CAMPO}', verbalePdfFirmato, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_PDF_VERBALE_VALUTAZIONE_SUL_CAMPO}', verbaleValutazioneSulCampoPdf, null, null, null, false, 'edit', true)" ></th:block>
 											<div th:if="${#fields.hasErrors('accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf}"></div>
 										</div>
 
@@ -670,30 +665,28 @@
 
 										<div class="item form-group">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO1}', valutazioneSulCampoAllegato1, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO1}', valutazioneSulCampoAllegato1, null, null, null, false, 'edit', false)" ></th:block>
 										</div>
 
 										<div class="item form-group">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO2}', valutazioneSulCampoAllegato2, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO2}', valutazioneSulCampoAllegato2, null, null, null, false, 'edit', false)" ></th:block>
 										</div>
 
 										<div class="item form-group">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO3}', valutazioneSulCampoAllegato3, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO3}', valutazioneSulCampoAllegato3, null, null, null, false, 'edit', false)" ></th:block>
 										</div>
 
-									</th:block>
+									</th:block>						
 
-									
-
-									<input id="submitButtonModal" type="submit" style="display: none;" />
-									<input type="hidden" th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.accreditamento}" />
+									<input id="submitButtonModalModificaDocumenti" type="submit" style="display: none;" />
+									<input type="hidden" th:field="${accreditamentoWrapper.accreditamento}" />
 
 								</form>
 							</div>
 							<div class="modal-footer">
-          						<label for="submitButtonModal" class="btn btn-success pull-right" th:text="#{label.salva}">Salva</label>
+          						<label for="submitButtonModalModificaDocumenti" class="btn btn-success pull-right" th:text="#{label.salva}">Salva</label>
           						<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
         					</div>
 						</div>
