--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -657,7 +657,7 @@
 
 										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf')} ? 'bad'">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_PDF_VERBALE_VALUTAZIONE_SUL_CAMPO}', verbaleValutazioneSulCampoPdf, null, null, null, false, 'edit', true)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_PDF_VERBALE_VALUTAZIONE_SUL_CAMPO}', verbalePdfFirmato, null, null, null, false, 'edit', true)" ></th:block>
 											<div th:if="${#fields.hasErrors('accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf}"></div>
 										</div>
 
@@ -665,17 +665,17 @@
 
 										<div class="item form-group">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO1}', valutazioneSulCampoAllegato1, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO1}', valutazioneSulCampoAllegato1, null, null, null, false, 'edit', false)" ></th:block>
 										</div>
 
 										<div class="item form-group">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO2}', valutazioneSulCampoAllegato2, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO2}', valutazioneSulCampoAllegato2, null, null, null, false, 'edit', false)" ></th:block>
 										</div>
 
 										<div class="item form-group">
 											<div class="col-lg-1 col-xs-12"></div>
-											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper.accreditamento, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO3}', valutazioneSulCampoAllegato3, null, null, null, false, 'edit', false)" ></th:block>
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_VALUTAZIONE_SUL_CAMPO_ALLEGATO3}', valutazioneSulCampoAllegato3, null, null, null, false, 'edit', false)" ></th:block>
 										</div>
 
 									</th:block>						
